--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,25 +1,41 @@
 name: Build k9s docker image
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Name of the docker tag to create.'
+        required: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Get version
-        run: |
-          eval `cat Dockerfile | grep 'K9S_VERSION' | head -1 | awk '{print $2}'`
-          echo "K9S_VERSION=$K9S_VERSION" >> $GITHUB_ENV
-      - name: Build and publish
-        uses: ozlevka-work/docker-build-gh-repo-push@develop
+      - uses: actions/checkout@v4
+      
+      - name: Setup QUEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR.IO
+        uses: docker/login-action@v3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          image-tag: ${{ env.K9S_VERSION }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image to GHCR
+        uses: docker/build-push-action@v6
+        env:
+          DOCKER_BUILD_SUMMARY: false
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
+          provenance: false
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ghcr.io/${{ github.repository_owner }}/k9s:${{ inputs.tag }}
